--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,10 @@
 }
 @layer components {
   .btn-book {
-    @apply text-blue bg-yellow rounded-md py-10 border 375:px-4 px-25 font-600 font-Prompt uppercase hover:bg-lightYellow hover:shadow-sm hover:shadow-white;
+    @apply text-blue bg-yellow rounded-md py-10 border 375:px-4  px-25 font-600 font-Prompt uppercase hover:bg-lightYellow hover:shadow-sm hover:shadow-white;
   }
   .btn-more {
-    @apply text-lightBlue border-2 border-lightBlue rounded-md py-10 375:px-1 1450:px-3 px-25 font-600 font-Prompt uppercase hover:bg-lightBlue hover:text-blue;
+    @apply text-lightBlue border-2 border-lightBlue rounded-md py-10 375:px-1 1450:px-4 px-25 font-600 font-Prompt uppercase hover:bg-lightBlue hover:text-blue;
   }
   .map-btn {
     @apply text-white bg-blue rounded-md font-Prompt px-10 py-10 uppercase flex justify-center gap-10;
@@ -139,25 +139,25 @@
     @apply h-auto container m-auto my-20;
   }
   .cursomer-review .all-review{
-    @apply h-auto xl:h-195 container my-20 bg-crem
+    @apply h-auto xl:h-195 container my-20 bg-crem;
   }
   .tab-slid{
-    @apply w-full h-full p-4 shadow-lg rounded-lg border
+    @apply w-full h-full p-4 shadow-lg rounded-lg ;
   }
   .tab-slid .tan-slid-item{
-    @apply w-full border-b flex gap-28 overflow-auto
+    @apply w-full border-b flex gap-28 overflow-auto;
   }
   .tab-slid .tab-button{
-    @apply px-4 py-2 flex items-center gap-2 focus:outline-none
+    @apply px-4 py-2 flex items-center gap-2 focus:outline-none;
   }
   .tab-slid .tab-content{
-    @apply p-4 w-full my-10 
+    @apply p-4 w-full my-10;
   }
   .tab-title{
-    @apply text-blue text-24 font-Prompt font-700 flex items-center gap-2
+    @apply text-blue text-24 font-Prompt font-700 flex items-center gap-2;
   }
   .tab-content ul{
-    @apply flex gap-4
+    @apply flex gap-4;
   }
 
   .cursomer-review .reviews{
@@ -195,7 +195,7 @@
     @apply h-[46px] w-[148px] bg-blue text-white text-center text-16 font-Prompt rounded-md;
   }
   .find-gram .gram-img:hover{
-    @apply scale-105 transition duration-700
+    @apply scale-105 transition duration-700;
   }
 
   /* adventure-awaits */
@@ -214,7 +214,7 @@
     @apply text-16 font-Prompt mt-12;
   }
   .footer input {
-    @apply h-[42px] w-full rounded-md my-2;
+    @apply h-[42px] w-full rounded-md my-2 text-black ps-2;
   }
   .footer .copy-right{
     @apply flex justify-center items-center font-Prompt py-20;
