--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,10 @@
     @apply text-blue bg-yellow rounded-md py-10 border 375:px-4  px-25 font-600 font-Prompt uppercase hover:bg-lightYellow hover:shadow-sm hover:shadow-white;
   }
   .btn-more {
-    @apply text-lightBlue border-2 border-lightBlue rounded-md py-10 375:px-1 1450:px-4 px-25 font-600 font-Prompt uppercase hover:bg-lightBlue hover:text-blue;
+    @apply text-lightBlue border-2 border-lightBlue rounded-md py-10 375:px-1 1450:px-3 px-25 font-600 font-Prompt uppercase hover:bg-lightBlue hover:text-blue;
   }
   .map-btn {
-    @apply text-white bg-blue rounded-md font-Prompt px-10 py-10 uppercase flex justify-center gap-10;
+    @apply text-white bg-blue rounded-md font-Prompt px-10 py-10 uppercase flex justify-center gap-10 hover:gap-12;
   }
   .header-title{
     @apply font-FjallaOne text-white
@@ -176,7 +176,7 @@
     @apply flex justify-center items-center py-20 my-20;
   }
   .cursomer-review .review-load-btn{
-    @apply text-blue py-15 px-25 bg-crem uppercase font-600 font-Prompt;
+    @apply text-blue py-15 px-25 bg-crem uppercase font-600 font-Prompt hover:bg-blue hover:text-crem transition delay-300;
   }
 
   /* map */
@@ -192,7 +192,10 @@
 
   /* find-gram */
   .find-gram .btn {
-    @apply h-[46px] w-[148px] bg-blue text-white text-center text-16 font-Prompt rounded-md;
+    @apply h-[46px] w-[148px] bg-blue text-white text-center text-16 font-Prompt rounded-md ;
+  }
+  .find-gram .btn:hover{
+    @apply bg-white text-blue shadow-md shadow-blue transition delay-300
   }
   .find-gram .gram-img:hover{
     @apply scale-105 transition duration-700;
