--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,10 +30,10 @@
     @apply text-white bg-blue rounded-md font-Prompt px-10 py-10 uppercase flex justify-center gap-10 hover:gap-12;
   }
   .header-title{
-    @apply font-FjallaOne text-white;
+    @apply font-FjallaOne text-white ;
   }
   .h1 {
-    @apply text-64 xl:text-110 drop-shadow-md;
+    @apply text-64 xl:text-110 drop-shadow-md ;
   }
   .title {
     @apply text-32 xl:text-48 font-FjallaOne text-blue xl:text-white uppercase text-center;
@@ -62,7 +62,7 @@
 }
 @layer utilities {
   .announcement {
-    @apply h-69 bg-blue flex justify-center items-center xl:text-32 text-yellow uppercase font-BowlbyOne;
+    @apply h-44 xl:h-69 bg-blue flex justify-center items-center xl:text-32 text-yellow uppercase font-BowlbyOne;
   }
 
   /* header */
@@ -103,7 +103,6 @@
   }
 
   /* populer-excursions */
- 
   .populer-excursions {
     @apply h-600 1366:h-800 xl:h-997 bg-crem xl:bg-blue relative border-transparent;
   }
