--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@
 }
 @layer components {
   .btn-book {
-    @apply text-blue bg-yellow rounded-md py-10 border 375:px-4  px-25 font-600 font-Prompt uppercase hover:bg-lightYellow hover:shadow-sm hover:shadow-white;
+    @apply text-blue bg-yellow rounded-md py-10 border 375:px-4 px-25 font-600 font-Prompt uppercase hover:bg-lightYellow hover:shadow-sm hover:shadow-white;
   }
   .btn-more {
     @apply text-lightBlue border-2 border-lightBlue rounded-md py-10 375:px-1 1450:px-3 px-25 font-600 font-Prompt uppercase hover:bg-lightBlue hover:text-blue;
@@ -46,7 +46,7 @@
   }
   .title-map {
     @apply text-blue text-48 xl:text-64 text-center drop-shadow-xl font-FjallaOne uppercase;
-  }
+  }   
   .title-adventure {
     @apply text-white text-48 xl:text-64 text-center drop-shadow-xl font-FjallaOne uppercase p-4;
   }
@@ -62,7 +62,7 @@
 }
 @layer utilities {
   .announcement {
-    @apply h-44 xl:h-69 bg-blue flex justify-center items-center xl:text-32 text-yellow uppercase font-BowlbyOne;
+    @apply 320:h-69 h-44 xl:h-69 bg-blue text-center  479:py-10 sm:py-10 xl:text-32 text-yellow uppercase font-BowlbyOne;
   }
 
   /* header */
@@ -183,7 +183,7 @@
     @apply container m-auto h-auto xl:h-530 bg-[url('../assets/image/map.png')] bg-no-repeat bg-center bg-cover p-30 flex flex-wrap justify-center xl:justify-between;
   }
   .map .map-contain {
-    @apply bg-blue text-center text-white h-auto xl:h-full w-full lg:w-[340px] order-2 xl:order-1 my-20 xl:my-auto;
+    @apply bg-blue text-center text-white h-auto xl:h-full w-full lg:w-[340px] order-2 xl:order-1 my-20 xl:my-auto rounded-md;
   }
   .map-title {
     @apply w-800 h-full p-50 sm:p-20 xl:p-32 order-1 xl:order-2 ;
